# antbear

./: .gitignore  Makefile  README.md  TODO  config.toml  pyproject.toml
antbear/: cli.py  config.py  html.py  http.py  read.py  report.py  timeline.py
antbear/analyzers/: api.py  base.py  cookies.py  csp.py  db.py  privacy.py  sri.py  ssrf.py  tabnabbing.py
antbear/readers/: base.py  har.py  pcap.py  scap.py
antbear/reporters/: base.py  json.py  mermaid.py  text.py
