[tool.poetry]
name = "antbear"
version = "0.1.0"
description = ""
authors = ["Greg Guthe <gguthe@mozilla.com>"]
license = "MPL-2"

[tool.poetry.scripts]
antbear = "antbear.cli:cli"

[tool.poetry.dependencies]
python = "^3.9"
scapy = "^2.4.4"
Werkzeug = "^1.0.1"
cryptography = "^3.2.1"
dpkt = "^1.9.4"
pcaper = "^1.0.11"
toml = "^0.10.2"
sortedcontainers = "^2.3.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.790"
ipython = "^7.19.0"
pytest = "^6.1.2"
coverage = "^5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py38"] # version with 39 not released yet

[tool.coverage.run]
branch = true
omit = [
  "*/.cache/*",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--doctest-modules --ignore .cache/"
testpaths = [
  "antbear",
]
